# test-cpp-v

./: .gitignore  CMakeLists.txt  README.md
app/: CMakeLists.txt  main.cpp
libv/: .gitignore  CMakeLists.txt  build.ps1  build.sh  v.mod
libv/src/: libv.h  main.v
